# GES-GSP-Stitching

./: .gitignore  hd3d_ges-gsp_benchmark_cb3a0ae2.plan.md
Code/: .gitignore  CMakeLists.txt  Configure.h  main.cpp
Code/Stitching/: NISwGSP_Stitching.cpp  Parameter.cpp  Parameter.h
Code/Util/: EdgeDetection.cpp  RuntimeConfig.cpp  RuntimeConfig.h
tools/: evaluate_hd3d.py  evaluate_stitchbench_ges_gsp.py  excluded_datasets.txt  hd3d_metrics.py  prepare_hd3d_pairs.py  prepare_stitchbench_general.py  run_hd3d_ges_gsp.ps1  run_stitchbench_ges_gsp.ps1
